# FMTest

./: gradle.properties
app/: build.gradle
app/src/androidTest/java/com/davidhs/fmtest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/davidhs/fmtest/: Gmtimbre.java  MainActivity.java  NativeFMSynth.java  NativeMIDIFile.java  SynthChannelManager.java
app/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  InputStream_streambuf.cpp  InputStream_streambuf.h  com_davidhs_fmtest_NativeFMSynth.h  com_davidhs_fmtest_NativeMIDIFile.h  com_davidhs_fmtest_NativeMIDIFile_MidiEvent.h  com_davidhs_fmtest_NativeMIDIFile_MidiEventList.h  gmtimbre.h  main.cpp  midifile.cpp  synth.cpp
app/src/main/jni/include/: Binasc.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/davidhs/fmtest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
